# clickcheck

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: roadmap.md
src/: analyzer.rs  cli.rs  client.rs  command.rs  context.rs  lib.rs  main.rs  model.rs  output.rs
src/client/: filter.rs
src/output/: text.rs
tests/fixtures/: context.toml
