[package]
name = "ch-query-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clickhouse = { version = "0.13.2", features = ["native-tls", "time"] }
dirs-next = "2.0.0"
futures = "0.3.31"
humantime = "2.2.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
