[package]
name = "ch-query-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
ascii_table = { version = "4.0.7", features = ["auto_table_width"] }
clap = { version = "4.5.37", features = ["derive"] }
clickhouse = { version = "0.13.3", features = ["native-tls", "time"] }
dirs-next = "2.0.0"
futures = "0.3.31"
humansize = "2.1.3"
humantime = "2.2.0"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.11", features = ["client-legacy"] }
keyring = { version = "3.6.2", features = ["apple-native"] }
reqwest = "0.12.15"
rpassword = "7.4.0"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
